--- a/foundry.toml
+++ b/foundry.toml
@@ -2,5 +2,13 @@
 src = "src"
 out = "out"
 libs = ["lib"]
+solc_version = "0.8.20"
+etherscan_api_key = "${ETHERSCAN_API_KEY}"
+
+[rpc_endpoints]
+sepolia = "${RPC_URL}"
+
+[etherscan]
+sepolia = { key = "${ETHERSCAN_API_KEY}" }
 
 # See more config options https://github.com/foundry-rs/foundry/blob/master/crates/config/README.md#all-options
